--- a/style.css
+++ b/style.css
@@ -394,6 +394,7 @@ li{
 }
 
 .copyright{
+    padding-bottom: 230px;
     margin-top: 48px;
 }
 
@@ -407,7 +408,7 @@ span img{
 }
 
 .logoes{
-    padding-left:460px ;
+    padding-left:430px ;
     font-size: 12px;
     color: #3e3e3e;
     /* padding: 14px 14px 14px; */
